--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ with-postgis-sqlx = ["with-sqlx", "geozero/with-wkb", "geozero/with-postgis-sqlx
 serde      = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono     = { version = "0.4", features = ["serde"] }
-sqlx       = { version = "0.5", optional = true }
-geozero    = { git = "https://github.com/georust/geozero", branch = "master" }
+
+[target.'cfg(unix)'.dependencies]
+sqlx    = { version = "0.5", optional = true }
+geozero = { git = "https://github.com/georust/geozero", branch = "master" }
