--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "elite_journal"
 description = "Elite: Dangerous journal file stuctures and parsers"
-version = "0.0.1-dev+alpha"
+version = "0.0.1-dev+alpha-0x01"
 authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
 license = "Beerware"
 edition = "2018"
@@ -17,4 +17,4 @@ chrono     = { version = "0.4", features = ["serde"] }
 
 [target.'cfg(unix)'.dependencies]
 sqlx    = { version = "0.5", optional = true }
-geozero = { git = "https://github.com/georust/geozero", branch = "master" }
+geozero = "^0.7"
