--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [features]
 with-sqlx = ["sqlx/runtime-async-std-native-tls"]
-with-postgis-sqlx = ["with-sqlx", "geozero/with-wkb", "geozero/with-postgis-sqlx"]
+with-postgis-sqlx = ["with-sqlx", "geozero/with-postgis-sqlx"]
 
 [dependencies]
 serde      = { version = "1.0", features = ["derive"] }
@@ -16,5 +16,5 @@ serde_json = "1.0"
 chrono     = { version = "0.4", features = ["serde"] }
 
 [target.'cfg(unix)'.dependencies]
-sqlx    = { version = "0.5", optional = true }
-geozero = "^0.8"
+sqlx    = { version = "^0.6", optional = true }
+geozero = "^0.9"
