--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ chrono     = { version = "0.4", features = ["serde"] }
 geozero    = "^0.9"
 serde      = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx       = { version = "^0.6", optional = true }
+sqlx       = { version = "^0.6" }
